# Waveshare-ESP32-C6-LCD-1.47-PromisedNeverland_Internet_Clock

./: README.md
Waveshare-ESP32-C6-LCD-1.47-PromisedNeverland_Internet_Clock/: CMakeLists.txt  Display_ST7789.cpp  LVGL_Driver.cpp  NeoPixel.cpp  NeoPixel.h  SD_Card.cpp  SD_Card.h  Waveshare-ESP32-C6-LCD-1.47-PromisedNeverland_Internet_Clock.ino  ui.c  ui.h  ui_MainScreen.h  ui_Start_Screen.c  ui_Start_Screen.h  ui_events.h  ui_font_Witka16.c  ui_helpers.c  ui_img_255117540.c  ui_img_humidity_png.c  ui_img_thermometer_png.c
Waveshare-ESP32-C6-LCD-1.47-PromisedNeverland_Internet_Clock/sls_files/export/: filelist.txt  ui.h  ui_MainScreen.c  ui_font_Witka10.c  ui_font_Witka14.c  ui_helpers.h  ui_img_1554230089.c
Waveshare-ESP32-C6-LCD-1.47-PromisedNeverland_Internet_Clock/sls_files/project/: PromisedNeverland_Internet_Clock.sll  PromisedNeverland_Internet_Clock.spj
Waveshare-ESP32-C6-LCD-1.47-PromisedNeverland_Internet_Clock/sls_files/project/assets/: ui_font_Witka10.fcfg  ui_font_Witka14.fcfg  ui_font_Witka16.fcfg
